package ar.edu.davinci.dvds20231cg4.domain;

public class Liquidacion implements EstadoPrendaStrategy {

	private int porcentajeDescuento;
	
	
	
}
