package ar.edu.davinci.dvds20231cg4.domain;

public class Promocion implements EstadoPrendaStrategy {
	
	private int valorDescuento;
	

}
